--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,20 @@
         "iosfwd": "cpp",
         "vector": "cpp",
         "fstream": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "__hash_table": "cpp",
+        "__split_buffer": "cpp",
+        "atomic": "cpp",
+        "deque": "cpp",
+        "filesystem": "cpp",
+        "ios": "cpp",
+        "list": "cpp",
+        "system_error": "cpp",
+        "unordered_map": "cpp",
+        "__bit_reference": "cpp",
+        "array": "cpp",
+        "initializer_list": "cpp",
+        "iterator": "cpp",
+        "string_view": "cpp"
     }
 }
